objects/PC_AdverseEvent2__c.object
<CustomObject>
    <description>The Adverse Event2 is a custom object in Patient Connect that represents the adverse events reported for the patients enrolled into the patient services program.</description>
    <fields>
        <fullName>ACLS_Engagement_Program_Code__c</fullName>
        <label>Engagement Program Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_AE_Received_by_Manufacturer_Date__c</fullName>
        <description>This indicates the date when the applicant, manufacturer, corporate affiliate,
            and so on received information about the occurrence of an adverse event.</description>
        <label>Date Received by Manufacturer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_ANDA__c</fullName>
        <description>The abbreviated new drug application or the new drug application (NDA) number.</description>
        <label>Abbreviated New Drug Application #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Abated_After_Use_Stopped_or_Reduced__c</fullName>
        <description>Event Abated after use stopped or dosage reduced flag</description>
        <label>Abated After Use Stopped or Reduced</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_ActionTaken__c</fullName>
        <description>The action taken by the patient or physician after an adverse event was observed.</description>
        <label>Action Taken</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Adverse_Event_Reporter__c</fullName>
        <description>The Role who reported Adverse Event.</description>
        <label>Reporter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>Physician Assistant</fullName>
                </value>
                <value>
                    <fullName>Other Healthcare Professional</fullName>
                </value>
                <value>
                    <fullName>Risk Manager</fullName>
                </value>
                <value>
                    <fullName>Biomedical Engineer</fullName>
                </value>
                <value>
                    <fullName>Administrator/Supervisor</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Non-Healthcare Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Adverse_Event_Terms__c</fullName>
        <description>Includes a list of adverse event terms that most accurately characterize the adverse event.</description>
        <label>Adverse Event Term(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Age_Unit__c</fullName>
        <description>Units used to determine the patient&apos;s age. For example, in years, months, weeks, or days.</description>
        <label>PC_Age_Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Year(s)</fullName>
                    <default>true</default>
                    <label>Year(s)</label>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Age__c</fullName>
        <description>The patient&apos;s age at the onset of the adverse event.</description>
        <label>Age at Onset of Event</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_BLA__c</fullName>
        <description>The 6 digit Biologics Application Number (BLA).</description>
        <label>Biologics Application #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Care_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Program (Case) to which the adverse event is associated with.</description>
        <label>Care Program</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Adverse Events 2</relationshipLabel>
        <relationshipName>Adverse_Events2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Causality__c</fullName>
        <description>The HCPs opinion of causality.</description>
        <label>Causality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not reported</fullName>
                </value>
                <value>
                    <fullName>Unable to determine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_CauseOfDeath__c</fullName>
        <description>The reason for the death.</description>
        <label>Cause of Death</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Combination_Product_Report__c</fullName>
        <description>Combination Product Report flag</description>
        <label>Combination Product Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Current_Treating_Physician__c</fullName>
        <description>The current treating physician associated with the program case.</description>
        <formula>PC_Care_Program__r.PC_Physician__c</formula>
        <label>Current Treating Physician</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Date_of_Birth__c</fullName>
        <description>The patient&apos;s date of birth. This value will be populated from the Account object.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Date_of_the_Report__c</fullName>
        <description>Date of the Report on the Event</description>
        <label>Date of the Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked for deactivated adverse events.</description>
        <label>Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Deactivation_Reason__c</fullName>
        <description>The reason for deactivating the adverse event.</description>
        <label>Deactivation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error in completing report</fullName>
                </value>
                <value>
                    <fullName>Incorrect patient</fullName>
                </value>
                <value>
                    <fullName>Incorrect information received from HCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Death_Date__c</fullName>
        <description>Date of Death</description>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Description__c</fullName>
        <description>Describes the event in detail using the reporter’s own words, including a description of what happened and a summary of all relevant clinical information (medical status prior to the event, signs and/or symptoms, differential diagnosis for the event in question, clinical course, treatment, outcome, and so on).</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Dose__c</fullName>
        <description>The dosage information that caused the adverse event.</description>
        <label>Dose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Drug_NDC__c</fullName>
        <description>Indicates National Drug Code.</description>
        <label>Drug NDC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Ethnicity__c</fullName>
        <description>Ethnicity of the patient.</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic/Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_EventType__c</fullName>
        <description>Indicates the type of event.</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Complaint</fullName>
                </value>
                <value>
                    <fullName>Medical Inquiry</fullName>
                </value>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Event_HLGT_Code__c</fullName>
        <description>High Level Group Term (HLGT) code to which the adverse event belongs to.</description>
        <label>High Level Group Term</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Event_HLGT__c</fullName>
        <description>High Level Group Term to which the adverse event belongs to.</description>
        <label>Event HLGT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Event_HLT_Code__c</fullName>
        <description>High Level Term (HLT) code to which the adverse event belongs to.</description>
        <label>High Level Term</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Event_HLT__c</fullName>
        <description>High Level Term  to which the adverse event belongs to.</description>
        <label>Event HLT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Event_LLT_Code__c</fullName>
        <description>Low Level Term (LLT) code to which the adverse event belongs to.</description>
        <label>Low Level Term</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Event_LLT__c</fullName>
        <description>Low Level Term to which the adverse event belongs to.</description>
        <label>Event LLT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Event_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field to Event Master</description>
        <label>Event Master</label>
        <referenceTo>PC_AdverseEvent2__c</referenceTo>
        <relationshipLabel>Adverse Events 2</relationshipLabel>
        <relationshipName>Adverse_Events_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Event_Onset_Date__c</fullName>
        <description>Indicates the actual or best estimate of the date of first onset of the adverse event.</description>
        <label>Event Onset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Event_Outcome__c</fullName>
        <description>Indicates the outcome of the adverse event occurred.</description>
        <label>Event Outcome</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Life-threatening</fullName>
                </value>
                <value>
                    <fullName>Disability or Permanent Damage</fullName>
                </value>
                <value>
                    <fullName>Hospitalization – initial or prolonged</fullName>
                </value>
                <value>
                    <fullName>Congenital Anomaly/Birth Defects</fullName>
                </value>
                <value>
                    <fullName>Other Serious (Important Medical Events)</fullName>
                </value>
                <value>
                    <fullName>Required Intervention to Prevent Permanent Impairment/Damage (Devices)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Event_PT_Code__c</fullName>
        <description>Preferred Term (PT) code to which the adverse event belongs to.</description>
        <label>Preferred Term</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Event_PT__c</fullName>
        <description>Preferred Term to which the adverse event belongs to.</description>
        <label>Event PT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Event_Reappeared_after_Reintroduction__c</fullName>
        <description>Event Reappeared after Reintroduction flag</description>
        <label>Event Reappeared after Reintroduction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Event_SOC_Code__c</fullName>
        <description>Indicates the System Organ Class (SOC) code to which the adverse event belongs to.</description>
        <label>System Organ Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Event_SOC__c</fullName>
        <description>Indicates System Organ Class  (SOC) to which the adverse event belongs to.</description>
        <label>Event SOC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Event_Verbatim__c</fullName>
        <description>Describes the occurred adverse event in reporter&apos;s words.</description>
        <label>Event Verbatim</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Expiration_Date__c</fullName>
        <description>Indicates the expiry date of the product.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Follow_Up_Number__c</fullName>
        <description>Phone number to follow up</description>
        <label>Follow-Up Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PC_Frequency__c</fullName>
        <description>Frequency at which the patient used the product.</description>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Gender__c</fullName>
        <description>Gender of the Patient</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HealthCareProfessional__c</fullName>
        <description>Indicates if the Reporter is Health care Professional or not</description>
        <label>Health Care Professional</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Hospitalization_Date__c</fullName>
        <description>The date on which the patient was hospitalized due to adverse event.</description>
        <label>Hospitalization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_IND__c</fullName>
        <description>The Investigational New Drug (IND) application number.</description>
        <label>Investigational New Drug Application #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_If_IND_Give_Protocol__c</fullName>
        <description>Protocol number.</description>
        <label>If IND, Give Protocol #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Indication_for_Product_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The symptom of the disease for which the product was prescribed for or used by the particular patient.</description>
        <label>Indication for Product Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Indication_for_use__c</fullName>
        <description>Informs for what indication the medication was used for.</description>
        <label>Indication for use</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Ini_Reporter_Also_Sent_Report_to_FDA__c</fullName>
        <description>Indicates whether the initial reporter also notified or submitted a copy of this report to FDA.</description>
        <label>Ini. Reporter Also Sent Report to FDA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_InquiryDescription__c</fullName>
        <description>Captures Medical Inquiry Description</description>
        <label>Inquiry Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Laboratory_Data__c</fullName>
        <description>Indicates all appropriate information, including relevant negative test and laboratory findings, in order to most completely convey how the medical work-up/assessment led to strong consideration of medical-product-induced disease as etiology for clinical status, as other differential diagnostic considerations were being eliminated.</description>
        <label>Laboratory Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_LatestAdverseEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the latest adverse event. This acts as a system level fields and should not be added on the layouts for editing purposes.</description>
        <label>Latest Adverse Event</label>
        <referenceTo>PC_AdverseEvent2__c</referenceTo>
        <relationshipLabel>Adverse Events 2 (Latest Adverse Event)</relationshipLabel>
        <relationshipName>PC_Adverse_Events_21</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Manufacturer_Address__c</fullName>
        <description>Drug manufacturer&apos;s address</description>
        <label>Manufacturer Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Manufacturer_Comp_Outsourcing_Fac__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the manufacturer is registered as 503B facility.</description>
        <label>Compounding Outsourcing Facility 503B?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Manufacturer_Email__c</fullName>
        <description>Drug manufacture&apos;s email</description>
        <label>Manufacturer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PC_Manufacturer_Name__c</fullName>
        <description>Indicates the manufacturer&apos;s name who reports the adverse event.</description>
        <label>Manufacturer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Manufacturer_Phone__c</fullName>
        <description>Phone number of the drug manufacturer</description>
        <label>Manufacturer Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PC_Manufacturer_Report_Number__c</fullName>
        <description>Indicates the unique identifier used by the manufacturer for this report.</description>
        <label>Manufacturer Report Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Meddra_ID__c</fullName>
        <description>Indicates Medical Dictionary for Regulatory Activities (MedDRA) ID.</description>
        <label>Meddra ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Meddra_Version__c</fullName>
        <description>Version of the MedDRA dictionary used to code the adverse event.</description>
        <label>Meddra Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Medication__c</fullName>
        <description>The name of the medication that caused the adverse event.</description>
        <label>Medication</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_NDA__c</fullName>
        <description>Indicates the unique identifier used by the manufacturer for this report.</description>
        <label>New Drug Application #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Notes__c</fullName>
        <description>Captures the notes about the event, if any.</description>
        <label>Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PC_OtherMedicalHistory__c</fullName>
        <description>The medical history of the patient.</description>
        <label>Other Medical History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Other_Relevent_History__c</fullName>
        <description>Any other relavent history data</description>
        <label>Other Relevant History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Outcome__c</fullName>
        <description>Indicates the outcome of the adverse event occurred.</description>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recovered</fullName>
                </value>
                <value>
                    <fullName>Improving</fullName>
                </value>
                <value>
                    <fullName>Unchanged</fullName>
                </value>
                <value>
                    <fullName>Deteriorating</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_PMA_510k__c</fullName>
        <description>The Premarket Application (PMA) or pre-market notification [510(k)] submission number for the approved / cleared medical device or combination product.</description>
        <label>Premarket Application / 510(k) #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ParentAdverseEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field to Adverse Event2. This acts as a system level fields and should not be added on the layouts for editing purposes.</description>
        <label>Parent Adverse Event</label>
        <referenceTo>PC_AdverseEvent2__c</referenceTo>
        <relationshipLabel>Adverse Events 2 (Parent Adverse Event)</relationshipLabel>
        <relationshipName>PC_Adverse_Events2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_PatientFirstname__c</fullName>
        <description>First name of the patient.</description>
        <label>Patient Firstname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_PatientLastname__c</fullName>
        <description>Last name of the patient.</description>
        <label>Patient Lastname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Patient_Identifier__c</fullName>
        <description>Manufacturer specific identifier for a patient.</description>
        <label>Patient Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Patient account with which the adverse event is associated.</description>
        <label>Patient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Adverse Events 2</relationshipLabel>
        <relationshipName>AdverseEvent2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_PermissiontoContactReporter__c</fullName>
        <description>This field captures the consent of reporter whether he has given permission to contact him/her or not.</description>
        <label>Permission to Contact Reporter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Pre_1938_Flag__c</fullName>
        <description>Indicates if the  suspect product  was marketed prior to 1938 and does not have an application number.</description>
        <label>Pre-1938</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_PreferredResponseChannel__c</fullName>
        <description>This field captures preferred response channel of reporter.</description>
        <label>Preferred Response Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_PreferredResponseWindow__c</fullName>
        <description>Preferred time window when the reporter can be contacted</description>
        <label>Preferred Response Window</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8:00AM - Noon</fullName>
                </value>
                <value>
                    <fullName>Noon - 4:00PM</fullName>
                </value>
                <value>
                    <fullName>4:00PM - 8:00PM</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Prescription__c</fullName>
        <description>Prescription</description>
        <label>Prescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Product_Compounded__c</fullName>
        <description>Indicates if the product was compounded.</description>
        <label>Product Compounded</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Product_Lot__c</fullName>
        <description>Indicates the lot number of the product used by the patient.</description>
        <label>Product Lot#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Product_Manufacturer__c</fullName>
        <description>Indicates the manufacturer of the consumed product.</description>
        <label>Product Manufacturer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Product_Name__c</fullName>
        <description>Indicates trade name of the suspect product.</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Product_OTC__c</fullName>
        <description>Indicates if the product is issued over-the-counter.</description>
        <label>Over the counter product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Product_Strength__c</fullName>
        <description>Indicates the strength of the product used by the patient during the occurrence of the adverse event.</description>
        <label>Product Strength</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Race__c</fullName>
        <description>Indicates the race of the patient as reported by the patient. For example, Asian, American Indian or Alaskan Native, Black or African American, and so on.</description>
        <label>Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Reference_No__c</fullName>
        <description>The cross reference number that is used to confirm the capture in a patient safety type of system.</description>
        <label>Reference No.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Report_Source_Other_Text__c</fullName>
        <description>Additional details on source of the report</description>
        <label>Report Source Other Text</label>
        <type>TextArea</type>
    </fields>
</CustomObject>